--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "lowdb": "^7.0.1",
+    "sharp": "^0.34.5",
     "socket.io-client": "^4.8.3",
     "toml": "3.0.0",
     "winston": "3.19.0"
